--- a/coding-projects/android/TaskTracker/app/src/main/res/values/strings.xml
+++ b/coding-projects/android/TaskTracker/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Task Tracker</string>
+    <string name="date_label">DATE</string>
+    <string name="start_time_label">START TIME</string>
+    <string name="end_time_label">END TIME</string>
+    <string name="done">DONE</string>
+    <string name="textfield_label">Today I worked on ...</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
 </resources>
