base commit to task tracker for issue 84

--- a/coding-projects/android/TaskTracker/app/src/main/res/values/strings.xml
+++ b/coding-projects/android/TaskTracker/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Task Tracker</string>
+    <string name="timer">Timer</string>
+    <string name="activity_heading">Your Activity</string>
 </resources>
